samples/troubleshooting/valid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>Sample Troubleshooting Title</title>
  <shortdesc>This is a short description.</shortdesc>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <cause><title>C</title><p>Cause description.</p></cause>
      <remedy><title>R</title><steps-informal><p>Perform this action.</p></steps-informal></remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>